syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainpb";

service Calculator {
    rpc Add (AddRequest) returns (AddResponse); //unary 
    rpc GenerateFibonacci (FibonacciReqest) returns (stream FibonacciResponse); // send numbers in real time
}

message AddRequest {
    int32 a =1;
    int32 b = 2;
}

message AddResponse {
    int32 sum = 1;
}

message FibonacciReqest {
    int32 n = 1;
}

message FibonacciResponse {
    int32 number = 1; 
}